Fix for bleeding images (outside containers)

--- a/source/sass/generic/_normalize.scss
+++ b/source/sass/generic/_normalize.scss
@@ -352,3 +352,12 @@ template {
 [hidden] {
     display: none;
 }
+
+
+/**
+   * Make images not bleed outside container
+   */
+
+img {
+    max-width: 100%;
+}
